--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "devDependencies": {
     "concurrently": "^6.2.0",
     "electron": "^13.1.2",
+    "electron-rebuild": "^2.3.5",
     "wait-on": "^5.3.0"
   },
   "dependencies": {
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "robotjs": "^0.6.0",
+    "vkey": "^1.0.1"
   }
 }
